[package]
name = "ddgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.23", features = ["derive"] }
fuzzy-matcher = "0.3.7"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
strsim = "0.11.1"
tokio = { version = "1.42.0", default-features = true,  features = ["rt", "rt-multi-thread", "macros"] }
